关于HTML与CSS的代码文件

--- a/Web/day02/06显示方式.html
+++ b/Web/day02/06显示方式.html
@@ -20,6 +20,8 @@
         img{
             width: 100px;
             height: 100px;
+            /*隐藏元素*/
+            display: none;
         }
     </style>
 </head>
