关于HTML与CSS的代码文件

--- a/Web/day01/07form表单2.html
+++ b/Web/day01/07form表单2.html
@@ -14,9 +14,9 @@
   <label for="r1">男</label>
   <input type="radio" name="gender" value="woman" id="r2">
   <label for="r2">女</label>
-  兴趣爱好:<input type="checkbox" name="hobby" value="cy">抽烟
-  <input type="checkbox" name="hobby" value="hj">喝酒
-  <input type="checkbox" name="hobby" checked value="tt">烫头<br>
+  兴趣爱好:<input type="checkbox" name="hobby" value="cy">看书
+  <input type="checkbox" name="hobby" value="hj">写字
+  <input type="checkbox" name="hobby" checked value="tt">绘画<br>
   生日:<input type="date" name="birthday"><br>
   靓照:<input type="file" name="pic"><br>
   所在地:
