关于HTML与CSS的代码文件

--- a/Web/day02/11综合练习.html
+++ b/Web/day02/11综合练习.html
@@ -9,14 +9,16 @@
             color: #666;
         }
         body>div{
+            /*前三步出外框(容器)*/
             width: 375px;
             height: 375.99px;
             background-color: #E8E8E8;
+            /*将图片按一定大小放入框内*/
             background-image: url("http://doc.canglaoshi.org/tstore_v1/images/itemCat/study_computer_img2.png");
             background-size: 292px 232px;
             background-repeat: no-repeat;/*禁止重复*/
-            background-position: 90% 80%;
-            overflow: hidden;
+            background-position:80% 80%;
+            overflow: hidden;/*避免粘连*/
         }
         div>div{
             width: 260.97px;
