--- a/Web/day04/10综合练习.html
+++ b/Web/day04/10综合练习.html
@@ -10,25 +10,29 @@
 <input type="button" value="美女" onclick="f(2)">
 <hr>
 <script>
+    let input = document.querySelector("input");
     function f(x) {
-        // let url = x == 1 ? "a.jpg" : "b.jpg"
-        // let i = document.createElement("img");
-        // i.src = url;
-        // document.body.append(i);
-        let a = document.querySelector("input")
-        if (x == 1) {
-            for (let i = 0; i < a.value; i++) {
-                let img = document.createElement("img");
-                img.src = "a.jpg";
-                document.body.append(img);
-            }
-        } else if (x == 2) {
-            for (let i = 0; i < a.value; i++) {
-                let img = document.createElement("img");
-                img.src = "b.jpg";
-                document.body.append(img);
-            }
+        for (let i = 0; i < input.value; i++) {
+            let url = x == 1 ? "a.jpg" : "b.jpg"//三目运算
+            let i = document.createElement("img");
+            i.src = url;
+            document.body.append(i);
         }
+        //分支判断
+        // let a = document.querySelector("input")
+        // if (x == 1) {
+        //     for (let i = 0; i < a.value; i++) {
+        //         let img = document.createElement("img");
+        //         img.src = "a.jpg";
+        //         document.body.append(img);
+        //     }
+        // } else if (x == 2) {
+        //     for (let i = 0; i < a.value; i++) {
+        //         let img = document.createElement("img");
+        //         img.src = "b.jpg";
+        //         document.body.append(img);
+        //     }
+        // }
     }
 </script>
 </body>
