关于HTML与CSS的代码文件

--- a/Web/day02/10综合练习.html
+++ b/Web/day02/10综合练习.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
-        body{
+        body {
             font: 12px "simhei", Arial, Helvetica, sans-serif;
             color: #666;
+            margin: 0px;
+            padding: 0px;
+            background-color: #f5f5f5;
         }
         body>div{
             width: 611px;/*定义div的大小*/
@@ -25,6 +28,7 @@
             margin: 68px 0 0 36px;
         }
         .title_p{
+            margin-top: 0;
             font-size: 32px;
             color: #333;
             margin-bottom: 12px;
