--- a/Web/day05/06文本相关指令.html
+++ b/Web/day05/06文本相关指令.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <div>
+    <!--存储变量的指令-->
   <!--1. 让此处的文本内容和变量进行绑定 (不依赖与某个标签)-->
   {{info}}
   <!--2. v-text 让元素的文本内容和变量进行绑定-->
@@ -18,6 +19,7 @@
   let v = new Vue({
     el:"body>div",
     data:{
+        //和info绑定赋值
       info:"文本相关<b>这是加粗</b>"
     }
   })
