--- a/Web/day03/01综合练习.html
+++ b/Web/day03/01综合练习.html
@@ -3,56 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <style>
-        body{
-            font: 12px "simhei", Arial, Helvetica, sans-serif;
-            color: #666;
-        }
-        body>div{
-            width: 198px;
-            height: 233px;
-            background: #E8E8E8;
-            box-sizing: border-box;
-            text-align: center;
-        }
-        div>img{
-            transition-duration: 2s;
-        }
-        div>img:hover{
-            transform: scale(1.1);
-        }
-       .title_p{
-           font-size: 12px;
-           color: #000000;
-           margin-top: 0;
-           margin-bottom: 6px;
-       }
-       .price_p{
-           margin: 6px 0 ;
-           font-weight: bold;
-           color: #0aa1ed;
-       }
-       a{
-           width: 100px;
-           height: 24px;
-           background-color: #0aa1ed;
-           line-height: 24px;/*上下居中*/
-           display: block;/*改成块级元素*/
-           color: white;
-           text-decoration: none;
-           border-radius: 3px;
-           margin: 0 auto;
-       }
+  <style>
+      body {
+          font: 12px "simhei", Arial, Helvetica, sans-serif;
+          color: #666;
+          margin: 0px;
+          padding: 0px;
+          background-color: #f5f5f5;
+      }
+    body>div{
+      width: 198px;
+      height: 233px;
+      background-color: #e8e8e8;
+      text-align: center;
+    }
+    .title_p{
+      color: black;
+        margin-top: 0;
+      margin-bottom: 6px;
+    }
+    .price_p{
+      color: #0aa1ed;
+      font-weight: bold;
+      margin: 6px 0 6px 0;
+    }
+    a{
+      width: 100px;
+      height: 24px;
+      background-color: #0aa1ed;
+      color: white;
+      text-decoration: none;
+      display: block;
+      /*让块级元素左右居中*/
+      margin: 0 auto;
+      line-height: 24px;
+      border-radius: 3px;
+    }
 
-    </style>
+
+
+  </style>
 </head>
 <body>
 <div>
-    <img src="http://doc.canglaoshi.org/tstore_v1/images/itemCat/study_computer_img3.png" alt="">
-    <p class="title_p">戴尔(DELL)XPS13-9360-R1609 13.3英<br>
-        寸微边框笔记本电脑</p>
-    <p class="price_p">￥4600.00</p>
-    <a href="">查看详情</a>
+  <img src="http://doc.canglaoshi.org/tstore_v1/images/itemCat/study_computer_img3.png" alt="">
+  <p class="title_p">戴尔(DELL)XPS13-9360-R1609 13.3英寸微边框笔记本电脑</p>
+  <p class="price_p">￥4600.00</p>
+  <a href="">查看详情</a>
 </div>
 </body>
 </html>
