--- a/Web/day05/12循环遍历.html
+++ b/Web/day05/12循环遍历.html
@@ -38,7 +38,7 @@
             //添加一个数组,里面有三个对象
             persons:[{name:"张三",age:18,gender:"男"},
             {name:"李四",age:28,gender:"女"},
-            {name:"王五",age:38,gender:"男"},]
+            {name:"王五",age:38,gender:"男"}]
         }
     })
 </script>
