关于JavaScript中Vue框架的代码文件

--- a/Web/day06/02综合练习.html
+++ b/Web/day06/02综合练习.html
@@ -41,7 +41,7 @@
         methods:{
             f(){
                 v.person = {name:"张三",age:"18",url:"../b.jpg",
-                        friends:["刘备","关羽","张飞"]};//向person对象中添加属性值值
+                        friends:["刘备","关羽","张飞"]};//向person对象中添加属性的值
             }
         }
     })
