--- a/Web/day05/07属性绑定.html
+++ b/Web/day05/07属性绑定.html
@@ -7,7 +7,7 @@
 <body>
 <div>
     {{info}}
-    <!--绑定属性:让元素的某个属性值和变量进行绑定-->
+    <!--★绑定属性:让元素的某个属性值和变量进行绑定-->
     <a :href="url">超链接</a><!--超链接路径属性-->
     <!--下面这种复杂写法如果idea没有安装vue插件会报错,
     在红色错误提示上面alt+回车选择第一个 即可解决-->
