--- a/Web/day06/eui/09走马灯.html
+++ b/Web/day06/eui/09走马灯.html
@@ -20,26 +20,27 @@
     .el-carousel__item:nth-child(2n+1) {
       background-color: #d3dce6;
     }
+    body>div{
+      margin-left: 200px;
+    }
   </style>
 </head>
 <body>
 <div id="app">
 <template>
-  <div class="block">
+  <div class="block" style="width: 800px">
     <span class="demonstration">默认 Hover 指示器触发</span>
-    <el-carousel height="1200px">
-      <el-carousel-item v-for="item in imgList" :key="item">
-        <img :src="item.img" alt="">
-        <h3 class="small">{{ item }}</h3>
+    <el-carousel height="500px">
+      <el-carousel-item v-for="item in arr">
+        <img :src="item" width="800px" height="500px">
       </el-carousel-item>
     </el-carousel>
   </div>
-  <div class="block">
+  <div class="block" style="width: 800px">
     <span class="demonstration">Click 指示器触发</span>
-    <el-carousel trigger="click" height="1200px">
-      <el-carousel-item v-for="item in imgList" :key="item">
-        <img :src="item.img">
-        <h3 class="small">{{ item }}</h3>
+    <el-carousel trigger="click" height="500px">
+      <el-carousel-item v-for="item in arr">
+        <img :src="item" width="800px" height="500px">
       </el-carousel-item>
     </el-carousel>
   </div>
@@ -55,7 +56,7 @@
     el: '#app',
     data: function() {
       return {
-        imgList:[{img:'../../a.jpg'},{img:'../../c.jpg'},{img:'../../d.jpg'}]
+        arr:['../../a.jpg','../../c.jpg','../../d.jpg']
       }
     },
     methods: {}
