--- a/Web/day07/index.html
+++ b/Web/day07/index.html
@@ -18,7 +18,7 @@
 <body>
 <div id="app">
     <el-container><!--用来划分区域的标签-->
-        <el-header height="150px"><!--上方部位-->
+        <el-header height="150px"><!--顶栏部位(内含上下两个div)-->
             <div style="width: 1200px;margin: 0 auto">
                 <img src="imgs/logo.png" style="width: 300px;vertical-align: middle" alt=""><!--对其方式中间对齐-->
                 <a href="">首页</a>
@@ -33,7 +33,7 @@
                 <el-divider direction="vertical"></el-divider>
                 <a href="">帮助</a>
             </div>
-            <!--导航菜单开始-->
+            <!--横向导航菜单开始-->
             <div style="background-color: #82c8ec">
                 <el-menu style="width: 1200px;margin: 0 auto"
                          :default-active="activeIndex"
@@ -51,7 +51,7 @@
                     <el-menu-item index="6'">美妆彩妆</el-menu-item>
                     <el-menu-item index="7'">母婴产品</el-menu-item>
                     <div style="float: right;position: relative;top: 10px">
-                        <el-input placeholder="请输入搜索内容" v-model="wd">
+                        <el-input placeholder="请输入搜索内容" v-model="wd"><!--双向绑定-->
                             <el-button slot="append" icon="el-icon-search" @click="search()"></el-button>
                             <!--slot="append"固定写法,搜索放到文本框里-->
                         </el-input>
@@ -60,11 +60,11 @@
             </div>
             <!--导航菜单结束-->
         </el-header>
-        <el-main style="width: 1200px;margin: 0 auto"><!--中间部位-->
-            <el-row gutter="20"><!--轮播图-->
-                <el-col span="18">
+        <el-main style="width: 1200px;margin: 0 auto"><!--主要区域部位-->
+            <el-row gutter="20"><!--<el-row>表示布局中的一行-->
+                <el-col span="18"><!--<el-col>表示1列,span表示分栏数,一共24列占18列-->
                     <el-carousel height="300px">
-                        <el-carousel-item>
+                        <el-carousel-item><!--添加走马灯图片-->
                             <img src="imgs/b1.jpg" width="100%" height="100%" alt="">;
                         </el-carousel-item>
                         <el-carousel-item>
@@ -75,14 +75,14 @@
                         </el-carousel-item>
                     </el-carousel>
                 </el-col>
-                <el-col span="6"></el-col>
-                <el-card>
+                <el-col span="6"></el-col><!--<el-col>表示1列,span表示分栏数,一共24列占6列-->
+                <el-card><!--6列大小放置卡片-->
                     <h3>
                         <i style="font-weight: bold"
                            class="el-icon-trophy">销量最高</i>
                     </h3>
                     <el-divider></el-divider><!--分割线-->
-                    <!--表格-->
+                    <!--卡片中的表格,属性绑定了一个包含排名,商品标题,销量三个字段的数组-->
                     <el-table
                             :data="topArr"
                             style="width: 100%">
@@ -94,9 +94,10 @@
                         </el-table-column>
                     </el-table>
                 </el-card>
-            </el-row>
-            <!--商品列表开始-->
+            </el-row><!--布局一行结束-->
+            <!--第二行商品列表开始-->
             <el-row gutter="20">
+                <!--定义6分栏的列,一行方4列,添加了循环遍历数组中的图片(路径,标题,原价,现价)并放置在每一个卡片card里-->
                 <el-col style="margin: 10px 0 10px 0" span="6" v-for="p in productArr">
                     <el-card>
                         <img :src="p.url" width="100%" alt="">
@@ -113,8 +114,8 @@
             </el-row>
             <!--商品列表结束-->
         </el-main>
-        <el-footer><!--下方部位-->
-            <div style="height: 95px;background-image: url('imgs/wave.png')"><!--波浪-->
+        <el-footer><!--底栏部位(包含两个div)-->
+            <div style="height: 95px;background-image: url('imgs/wave.png')"><!--该div放置波浪图片-->
             </div>
             <div style="background-color:#3f3f3f; padding:30px 0; text-align:center; color: #b1b1b1">
                 <p>Copyright © 北京达内金桥科技有限公司版权所有 京ICP备12003709号-3 京公网安备 11010802029572号
@@ -135,33 +136,99 @@
         el: '#app',
         data: function () {
             return {
-                activeIndex: '1',
-                wd: '',
-                topArr: [{title: '小米电视', saleCount: 688},
+                activeIndex: '1',//属性绑定默认第一个
+                wd: '',//双向绑定
+                topArr: [{title: '小米电视', saleCount: 688},//正文销量卡片中的数组
                     {title: '李宁毛巾', saleCount: 548},
                     {title: '安踏拖鞋', saleCount: 435},
                     {title: '华为手机', saleCount: 322},
                     {title: '匹克球鞋', saleCount: 256},
                     {title: '联想电脑', saleCount: 198}],
-                productArr:[{title:"森马牛仔裤女宽松慢跑裤运动风2022春季新款显瘦束脚长裤复古",price:233,oldPrice:598,url:"imgs/a.jpg",saleCount:2342},
-                    {title:"茵曼马甲连衣裙两件套春季新款娃娃领色织格长袖背心裙套装",price:233,oldPrice:598,url:"imgs/b.jpg",saleCount:2342},
-                    {title:"雪中飞墨绿色短袖t恤女夏2022新款纯棉半袖打底体恤夏季上衣潮ins",price:233,oldPrice:598,url:"imgs/c.jpg",saleCount:2342},
-                    {title:"【佟丽娅同款】鸭鸭明星同款羽绒服2021年冬季新款时尚连帽外套冬",price:233,oldPrice:598,url:"imgs/d.jpg",saleCount:2342},
-                    {title:"BEASTER小恶魔鬼脸明星同款夹克毛绒保暖加厚字母印花宽松外套ins",price:233,oldPrice:598,url:"imgs/e.jpg",saleCount:2342},
-                    {title:"香影毛呢外套女中长款2021年冬季新款气质韩版娃娃领紫色呢子大衣",price:233,oldPrice:598,url:"imgs/f.jpg",saleCount:2342},
-                    {title:"SEMIR森马商场同款打底针织毛衣纯色高领新品显瘦",price:233,oldPrice:598,url:"imgs/g.jpg",saleCount:2342},
-                    {title:"美特斯邦威女MTEE 贺岁系列中长款风衣736598",price:233,oldPrice:598,url:"imgs/h.jpg",saleCount:2342},
-                    {title:"imone2021秋款黑色小西装外套女韩版学生宽松学院风外套jk外套",price:233,oldPrice:598,url:"imgs/i.jpg",saleCount:2342},
-                    {title:"BEASTER 小恶魔明星同款保暖长袖街头潮流连帽卫衣情侣上衣",price:233,oldPrice:598,url:"imgs/j.jpg",saleCount:2342},
-                    {title:"憨厚皇后100%绵羊皮2021秋海宁真皮皮衣女长款修身绵羊皮风衣外",price:233,oldPrice:598,url:"imgs/k.jpg",saleCount:2342},
-                    {title:"美特斯邦威高腰牛仔裤女宽松小脚新款春秋彩色潮流女士牛仔",price:233,oldPrice:598,url:"imgs/a.jpg",saleCount:2342}]
+                productArr: [{  //正文下方12张卡片对象的数组
+                    title: "森马牛仔裤女宽松慢跑裤运动风2022春季新款显瘦束脚长裤复古",
+                    price: 233,
+                    oldPrice: 598,
+                    url: "imgs/a.jpg",
+                    saleCount: 2342
+                },
+                    {
+                        title: "茵曼马甲连衣裙两件套春季新款娃娃领色织格长袖背心裙套装",
+                        price: 233,
+                        oldPrice: 598,
+                        url: "imgs/b.jpg",
+                        saleCount: 2342
+                    },
+                    {
+                        title: "雪中飞墨绿色短袖t恤女夏2022新款纯棉半袖打底体恤夏季上衣潮ins",
+                        price: 233,
+                        oldPrice: 598,
+                        url: "imgs/c.jpg",
+                        saleCount: 2342
+                    },
+                    {
+                        title: "【佟丽娅同款】鸭鸭明星同款羽绒服2021年冬季新款时尚连帽外套冬",
+                        price: 233,
+                        oldPrice: 598,
+                        url: "imgs/d.jpg",
+                        saleCount: 2342
+                    },
+                    {
+                        title: "BEASTER小恶魔鬼脸明星同款夹克毛绒保暖加厚字母印花宽松外套ins",
+                        price: 233,
+                        oldPrice: 598,
+                        url: "imgs/e.jpg",
+                        saleCount: 2342
+                    },
+                    {
+                        title: "香影毛呢外套女中长款2021年冬季新款气质韩版娃娃领紫色呢子大衣",
+                        price: 233,
+                        oldPrice: 598,
+                        url: "imgs/f.jpg",
+                        saleCount: 2342
+                    },
+                    {title: "SEMIR森马商场同款打底针织毛衣纯色高领新品显瘦", price: 233, oldPrice: 598, url: "imgs/g.jpg", saleCount: 2342},
+                    {
+                        title: "美特斯邦威女MTEE 贺岁系列中长款风衣736598",
+                        price: 233,
+                        oldPrice: 598,
+                        url: "imgs/h.jpg",
+                        saleCount: 2342
+                    },
+                    {
+                        title: "imone2021秋款黑色小西装外套女韩版学生宽松学院风外套jk外套",
+                        price: 233,
+                        oldPrice: 598,
+                        url: "imgs/i.jpg",
+                        saleCount: 2342
+                    },
+                    {
+                        title: "BEASTER 小恶魔明星同款保暖长袖街头潮流连帽卫衣情侣上衣",
+                        price: 233,
+                        oldPrice: 598,
+                        url: "imgs/j.jpg",
+                        saleCount: 2342
+                    },
+                    {
+                        title: "憨厚皇后100%绵羊皮2021秋海宁真皮皮衣女长款修身绵羊皮风衣外",
+                        price: 233,
+                        oldPrice: 598,
+                        url: "imgs/k.jpg",
+                        saleCount: 2342
+                    },
+                    {
+                        title: "美特斯邦威高腰牛仔裤女宽松小脚新款春秋彩色潮流女士牛仔",
+                        price: 233,
+                        oldPrice: 598,
+                        url: "imgs/a.jpg",
+                        saleCount: 2342
+                    }]
             }
         },
         methods: {
-            search() {
+            search() {//该方法定义文本框输入的内容提示
                 v.$message("搜索的内容是: " + v.wd);
             },
-            handleSelect(index, indexPath) {
+            handleSelect(index, indexPath) {//该方法定义横向导航菜单中点击的菜单提示
                 v.$message(index);
             }
         }
