关于JavaScript中Vue框架的代码文件

--- a/Web/day07/detail.html
+++ b/Web/day07/detail.html
@@ -59,12 +59,12 @@
         <el-main style="width: 1200px;margin: 0 auto">
             <!--一层row为一个整体24分栏,同层col共用一个整体-->
             <el-row gutter="20">
-                <el-col span="12">
+                <el-col span="12"><!--占据12分栏中添加卡片标签放置图片-->
                     <el-card>
                         <img src="imgs/a.jpg" width="100%" alt="">
                     </el-card>
                 </el-col>
-                <el-col span="12">
+                <el-col span="12"><!--占据右12分栏中放置p标签和三个同级的各8分栏卡片,并添加图片到每一个卡片中-->
                     <p style="font-size: 25px">
                         森马牛仔裤女宽松慢跑裤运动风2022春季新款显瘦束脚长裤复古
                     </p>
