关于Springboot的代码文件

--- a/Web/day07/admin.html
+++ b/Web/day07/admin.html
@@ -132,7 +132,7 @@
         el: '#app',
         data: function () {
             return {
-                currentIndex:"1-1",
+                currentIndex:"1-1",//默认1-1
                 categoryArr:[{name:"品牌服装"},{name:"精品女装"},
                     {name:"美食健康"},{name:"数码科技"},{name:"篮球鞋"}],
                 bannerArr:[{url:"imgs/b1.jpg"},{url:"imgs/b2.jpg"},
