--- a/Web/day07/admin1.html
+++ b/Web/day07/admin1.html
@@ -57,7 +57,6 @@
                         <el-menu-item index="3-1">商品列表</el-menu-item>
                         <el-menu-item index="3-2">添加商品</el-menu-item>
                     </el-submenu>
-
                 </el-menu>
                 <!--导航菜单结束-->
             </el-aside>
@@ -66,6 +65,7 @@
             <el-main>
                 <!--开始处理分类表格1-1-->
                 <el-table v-if="currentIndex=='1-1'" :data="categoryArr" style="width: 100%">
+                    <!--type=index  设置这一列显示的内容为编号-->
                     <el-table-column type="index" label="编号" width="180">
                     </el-table-column>
                     <el-table-column prop="name" label="分类名称" width="180">
@@ -153,7 +153,7 @@
         el: '#app',
         data: function () {
             return {
-                currentIndex:"1-1",
+                currentIndex:"1-1",//默认1-1
                 categoryArr:[{name:"品牌服装"},{name:"精品女装"},//向categoryArr数组中添加分类名称
                     {name:"美食健康"},{name:"数码科技"},{name:"篮球鞋"}],
                 bannerArr:[{url:"imgs/b1.jpg"},{url:"imgs/b2.jpg"},//向bannerArr数组中添加轮播图图片路径
