关于Springboot的代码文件

--- a/boot011/src/main/resources/static/reg.html
+++ b/boot011/src/main/resources/static/reg.html
@@ -7,8 +7,9 @@
 <body>
 <h1>注册页面</h1>
 <form action="/reg">
-  <input type="text" name="username" placeholder="用户名">
-  <input type="text" name="password" placeholder="密码">
+    <!--required="required"该属性规定输入框不能为空-->
+  <input type="text" name="username" placeholder="用户名" required="required">
+  <input type="password" name="password" placeholder="密码" required="required">
   <input type="text" name="nickname" placeholder="昵称">
   <input type="submit" value="注册">
 </form>
