关于Springboot的代码文件

--- a/boot011/src/main/resources/static/index.html
+++ b/boot011/src/main/resources/static/index.html
@@ -25,6 +25,7 @@ http://localhost:8080/hello
 <a href="/param.html">测试传参</a>
 <a href="/bmi.html">身体质量指数测试</a>
 <hr>
-<a href="/reg.html">注册</a>
+<a href="/reg.html">用户注册</a>
+<a href="/login.html">用户登录</a>
 </body>
 </html>
