关于SpringMVC与MyBatis框架的代码文件

--- a/weibo/src/main/resources/static/detail.html
+++ b/weibo/src/main/resources/static/detail.html
@@ -18,7 +18,7 @@
     <hr>
     <h3>评论记录</h3>
     <h3 v-for="c in commentArr">
-        {{c.userId}}评论了:{{c.content}}:{{c.weiboId}}
+        {{c.userId}}评论了:{{c.content}}
     </h3>
 </div>
 <script src="https://cdn.bootcdn.net/ajax/libs/axios/0.21.1/axios.min.js"></script>
