关于SpringMVC与MyBatis框架的代码文件

--- a/weibo/src/main/resources/static/login.html
+++ b/weibo/src/main/resources/static/login.html
@@ -29,7 +29,7 @@
                         alert("登录成功!");
                         location.href="/";//回到首页
                     }else if(response.data==2){
-                        alert("用户名不已存在!")
+                        alert("用户名不存在!")
                     }else {
                         alert("密码错误!")
                     }
