关于SpringMVC与MyBatis框架的代码文件

--- a/weibo/src/main/resources/static/index.html
+++ b/weibo/src/main/resources/static/index.html
@@ -12,6 +12,7 @@
         <div>
             <h2>欢迎{{user.nickname}}回来!</h2>
             <a href="/send.html">发布微博</a>
+            <!--点击退出登录后,服务端会立即删除session中保存的用户数据,故该div判断为false,不进行显示-->
             <a href="javascript:void(0)" @click="logout()">退出登录</a>
             <hr>
         </div>
