--- a/coolshark/src/main/resources/static/admin.html
+++ b/coolshark/src/main/resources/static/admin.html
@@ -140,11 +140,18 @@
                         scope.row 得到当前行对应的对象
                         -->
                         <template slot-scope="scope">
-                            <el-button
-                                    size="mini"
-                                    type="danger"
-                                    @click="handleDelete(scope.$index, scope.row)">删除
+                            <el-button size="mini" @click="productUpdate(scope.row)"
+                                       type="success">修改
                             </el-button>
+                            <!--scope.row代表当前行对应数组中的对象-->
+                            <el-popconfirm
+                                    title="您确认删除此商品吗?"
+                                    @confirm="productDelete(scope.$index, scope.row)"
+                            >
+                                <el-button slot="reference" size="mini"
+                                           type="danger">删除
+                                </el-button>
+                            </el-popconfirm>
                         </template>
                     </el-table-column>
                 </el-table>
@@ -167,86 +174,22 @@
                 currentIndex: "1-1",
                 categoryArr: [],
                 bannerArr: [],
-                productArr: [{
-                    title: "森马牛仔裤女宽松慢跑裤运动风2022春季新款显瘦束脚长裤复古",
-                    price: 233,
-                    oldPrice: 598,
-                    url: "imgs/a.jpg",
-                    saleCount: 2342
-                }, {
-                    title: "茵曼马甲连衣裙两件套春季新款娃娃领色织格长袖背心裙套装",
-                    price: 233,
-                    oldPrice: 598,
-                    url: "imgs/b.jpg",
-                    saleCount: 2342
-                },
-                    {
-                        title: "雪中飞墨绿色短袖t恤女夏2022新款纯棉半袖打底体恤夏季上衣潮ins",
-                        price: 233,
-                        oldPrice: 598,
-                        url: "imgs/c.jpg",
-                        saleCount: 2342
-                    },
-                    {
-                        title: "【佟丽娅同款】鸭鸭明星同款羽绒服2021年冬季新款时尚连帽外套冬",
-                        price: 233,
-                        oldPrice: 598,
-                        url: "imgs/d.jpg",
-                        saleCount: 2342
-                    },
-                    {
-                        title: "BEASTER小恶魔鬼脸明星同款夹克毛绒保暖加厚字母印花宽松外套ins",
-                        price: 233,
-                        oldPrice: 598,
-                        url: "imgs/e.jpg",
-                        saleCount: 2342
-                    },
-                    {
-                        title: "香影毛呢外套女中长款2021年冬季新款气质韩版娃娃领紫色呢子大衣",
-                        price: 233,
-                        oldPrice: 598,
-                        url: "imgs/f.jpg",
-                        saleCount: 2342
-                    },
-                    {title: "SEMIR森马商场同款打底针织毛衣纯色高领新品显瘦", price: 233, oldPrice: 598, url: "imgs/g.jpg", saleCount: 2342},
-                    {
-                        title: "美特斯邦威女MTEE 贺岁系列中长款风衣736598",
-                        price: 233,
-                        oldPrice: 598,
-                        url: "imgs/h.jpg",
-                        saleCount: 2342
-                    },
-                    {
-                        title: "imone2021秋款黑色小西装外套女韩版学生宽松学院风外套jk外套",
-                        price: 233,
-                        oldPrice: 598,
-                        url: "imgs/i.jpg",
-                        saleCount: 2342
-                    },
-                    {
-                        title: "BEASTER 小恶魔明星同款保暖长袖街头潮流连帽卫衣情侣上衣",
-                        price: 233,
-                        oldPrice: 598,
-                        url: "imgs/j.jpg",
-                        saleCount: 2342
-                    },
-                    {
-                        title: "憨厚皇后100%绵羊皮2021秋海宁真皮皮衣女长款修身绵羊皮风衣外",
-                        price: 233,
-                        oldPrice: 598,
-                        url: "imgs/k.jpg",
-                        saleCount: 2342
-                    },
-                    {
-                        title: "美特斯邦威高腰牛仔裤女宽松小脚新款春秋彩色潮流女士牛仔",
-                        price: 233,
-                        oldPrice: 598,
-                        url: "imgs/a.jpg",
-                        saleCount: 2342
-                    }]
+                productArr: []
             }
         },
         methods: {
+            //修改商品
+            productUpdate(product) {//传递一个Product对象
+                location.href="/updateProduct.html?id="+product.id;
+            },
+            //删除商品
+            productDelete(index, product) {
+                //发出删除商品请求
+                axios.get("/product/delete?id=" + product.id).then(function (response) {
+                    //删除JS数组中的元素 (删除位置,删除数量)
+                    v.productArr.splice(index, 1);
+                })
+            },
             //修改分类
             categoryUpdate(category) {//接收修改的category对象
                 let name = prompt("请输入新的分类名称");//先利用文本框获取输入的分类名称
@@ -270,7 +213,7 @@
             },
             //修改轮播图
             bannerUpdate(banner) {
-                location.href="/updateBanner.html?url="+banner.url+"&id="+banner.id;
+                location.href = "/updateBanner.html?url=" + banner.url + "&id=" + banner.id;
             },
             //删除轮播图
             bannerDelete(index, banner) {//传递一个对象和下标
@@ -301,7 +244,7 @@
                     location.href = "/insertBanner.html";
                 } else if (key == '3-2') {
                     //跳转到添加商品页面
-                    location.href="/insertProduct.html"
+                    location.href = "/insertProduct.html"
                 } else {
                     v.currentIndex = key;
                 }
@@ -317,6 +260,9 @@
                 v.bannerArr = response.data;
             })
             //发送请求获取所有商品的数据
+            axios.get("/product/select/admin").then(function (response) {
+                v.productArr = response.data;
+            })
         }
     })
 </script>
