--- a/coolshark/src/main/resources/static/index.html
+++ b/coolshark/src/main/resources/static/index.html
@@ -12,6 +12,16 @@
         .el-table .el-table__cell{
             padding: 0;
         }
+        .el-table .cell{
+            white-space: nowrap;/*设置内容不换行*/
+            text-overflow: ellipsis;/*有超出显示范围的文本时显示*/
+        }
+        .p_img:hover{
+            position: relative;
+            top: 5px;
+            /*设置元素阴影: x偏移值 y偏移值 浓度(值越大越模糊) 范围 颜色*/
+            box-shadow: 0 0 3px 5px #333;
+        }
     </style>
 </head>
 <body>
@@ -85,7 +95,7 @@
             <el-row gutter="20">
                 <el-col style="margin: 10px 0" span="6" v-for="p in productArr">
                     <el-card>
-                        <img :src="p.url" width="100%" alt="">
+                        <img class="p_img" :src="p.url" width="100%" alt="">
                         <div>
                             <p style="font-size: 15px;height: 40px;margin-top: 0">
                                 {{p.title}}</p>
@@ -127,12 +137,7 @@
                 bannerArr:[],
                 activeIndex:"1",//默认菜单下标为1
                 wd:"",
-                topArr:[{title:"小米电视",saleCount:688},
-                    {title:"李宁毛巾",saleCount:548},
-                    {title:"安踏拖鞋",saleCount:435},
-                    {title:"华为手机",saleCount:322},
-                    {title:"匹克球鞋",saleCount:256},
-                    {title:"联想电脑",saleCount:198},],
+                topArr:[],
                 productArr:[{title:"森马牛仔裤女宽松慢跑裤运动风2022春季新款显瘦束脚长裤复古",price:233,oldPrice:598,url:"imgs/a.jpg",saleCount:2342},
                     {title:"茵曼马甲连衣裙两件套春季新款娃娃领色织格长袖背心裙套装",price:233,oldPrice:598,url:"imgs/b.jpg",saleCount:2342},
                     {title:"雪中飞墨绿色短袖t恤女夏2022新款纯棉半袖打底体恤夏季上衣潮ins",price:233,oldPrice:598,url:"imgs/c.jpg",saleCount:2342},
@@ -161,6 +166,10 @@
            //发请求获取所有轮播图信息对象
            axios.get("/banner/select").then(function (response) {
                v.bannerArr = response.data;
+           })
+           //发请求获取排行榜数据
+           axios.get("/product/select/top").then(function (response) {
+               v.topArr = response.data;
            })
        }
    })
