--- a/coolshark/src/main/resources/static/index.html
+++ b/coolshark/src/main/resources/static/index.html
@@ -122,7 +122,7 @@
     </el-container>
 </div>
 </body>
-<!--inport Axios Framework-->
+<!--import Axios Framework-->
 <script src="https://cdn.bootcdn.net/ajax/libs/axios/0.21.1/axios.min.js"></script>
 <!-- import Vue before Element -->
 <script src="https://cdn.staticfile.org/vue/2.6.14/vue.min.js"></script>
