关于SpringMVC与MyBatis框架的代码文件

--- a/coolshark/src/main/resources/static/detail.html
+++ b/coolshark/src/main/resources/static/detail.html
@@ -18,7 +18,7 @@
         <el-header height="150px">
             <div style="width: 1200px;margin: 0 auto">
                 <img src="imgs/logo.png" style="width: 300px;vertical-align: middle" alt="">
-                <a href="">首页</a><el-divider direction="vertical"></el-divider>
+                <a href="/">首页</a><el-divider direction="vertical"></el-divider>
                 <a href="">热点资讯</a><el-divider direction="vertical"></el-divider>
                 <a href="">商家入驻</a><el-divider direction="vertical"></el-divider>
                 <a href="">社会招聘</a><el-divider direction="vertical"></el-divider>
@@ -35,13 +35,8 @@
                     background-color="#82c8ec"
                     text-color="#fff"
                     active-text-color="#fff">
-                <el-menu-item  index="1">精彩活动</el-menu-item>
-                <el-menu-item  index="2">当季女装</el-menu-item>
-                <el-menu-item  index="3">品牌男装</el-menu-item>
-                <el-menu-item  index="4">环球美食</el-menu-item>
-                <el-menu-item  index="5">医药健康</el-menu-item>
-                <el-menu-item  index="6">美妆彩妆</el-menu-item>
-                <el-menu-item  index="7">母婴产品</el-menu-item>
+                    <!--v-for循环遍历List中的所有查询分类信息对象  一个index下对应一个分类-->
+                <el-menu-item v-for="c in categoryArr" :index="c.id">{{c.name}}</el-menu-item>
                     <div style="float: right;position: relative;top: 10px">
                         <el-input placeholder="请输入搜索内容" v-model="wd">
                             <el-button slot="append" icon="el-icon-search" @click="search()"></el-button>
@@ -56,19 +51,20 @@
             <el-row gutter="20">
                 <el-col span="12">
                     <el-card>
-                        <img src="imgs/a.jpg" width="100%" alt="">
+                        <img :src="p.url" width="100%" alt="">
                     </el-card>
                 </el-col>
                 <el-col span="12">
                     <p style="font-size: 25px">
-                        森马牛仔裤女宽松慢跑裤运动风2022春季新款显瘦束脚长裤复古
+                        {{p.title}}
                     </p>
+                    <span style="color: #666;font-size: 12px">发布于:{{p.created}}</span>
                     <el-divider></el-divider>
                     <p style="font-size: 15px;color: #666">
-                        销量:234 浏览量:200</p>
+                        销量:{{p.saleCount}} 浏览量:{{p.viewCount}}</p>
                     <p style="font-size: 25px;font-weight: bold">
-                        ￥128
-                        <span style="font-size: 15px;color: #666">原价:<s>258</s></span>
+                        ￥{{p.price}}
+                        <span style="font-size: 15px;color: #666">原价:<s>{{p.oldPrice}}</s></span>
                     </p>
                     <el-row gutter="20" style="text-align: center">
                         <el-col span="8">
@@ -117,14 +113,38 @@
         el: '#app',
         data: function() {
             return {
-                activeIndex:"1",
+                activeIndex:"",
                 wd:"",
+                categoryArr:[],
+                p:{
+                    title:'',
+                    price:'',
+                    saleCount:'',
+                    viewCount:'',
+                    oldPrice:'',
+                    url:'',
+                    created:''
+                }
             }
         },
        methods: {
            handleSelect(key,keyPath){
                console.log(key,keyPath);
+               //每当点击其他分类,根据分类的id跳转到对应分类的结果页面
+               location.href="/result.html?id="+key;
+           },
+           search(){//详情页面搜索后跳转到结果页面并将搜索的内容wd传入
+             location.href="/result.html?wd="+v.wd;
            }
+       },
+       created:function (){
+            axios.get("/category/select").then(function (response) {
+                v.categoryArr = response.data;
+            })
+           //发送请求通过id获取商品详情
+           axios.get("/product/selectById/detail"+location.search).then(function (response) {
+               v.p = response.data;
+           })
        }
    })
 </script>
