--- a/coolshark/src/main/resources/static/result.html
+++ b/coolshark/src/main/resources/static/result.html
@@ -30,7 +30,7 @@
         <el-header height="150px">
             <div style="width: 1200px;margin: 0 auto">
                 <img src="imgs/logo.png" style="width: 300px;vertical-align: middle" alt="">
-                <a href="">首页</a><el-divider direction="vertical"></el-divider>
+                <a href="/">首页</a><el-divider direction="vertical"></el-divider>
                 <a href="">热点资讯</a><el-divider direction="vertical"></el-divider>
                 <a href="">商家入驻</a><el-divider direction="vertical"></el-divider>
                 <a href="">社会招聘</a><el-divider direction="vertical"></el-divider>
@@ -60,37 +60,7 @@
 
         </el-header>
         <el-main style="width: 1200px;margin: 0 auto">
-            <el-row gutter="20">
-                <el-col span="18">
-                    <!--轮播图开始-->
-                    <el-carousel height="300px">
-                        <!--v-for循环遍历所有轮播图对象-->
-                        <el-carousel-item v-for="b in bannerArr">
-                            <img :src="b.url" width="100%" height="100%" alt="">
-                        </el-carousel-item>
-                    </el-carousel>
-                    <!--轮播图结束-->
-                </el-col>
-                <el-col span="6">
-                    <el-card>
-                        <h3>
-                            <i style="font-weight: bold"
-                               class="el-icon-trophy">销量最高</i>
-                        </h3>
-                        <el-divider></el-divider>
-                        <el-table
-                                :data="topArr"
-                                style="width: 100%">
-                            <el-table-column type="index" label="排名">
-                            </el-table-column>
-                            <el-table-column prop="title" label="商品标题" width="100">
-                            </el-table-column>
-                            <el-table-column prop="saleCount" label="销量">
-                            </el-table-column>
-                        </el-table>
-                    </el-card>
-                </el-col>
-            </el-row>
+
         <!--商品列表开始-->
             <el-row gutter="20">
                 <el-col style="margin: 10px 0" span="6" v-for="p in productArr">
@@ -140,22 +110,25 @@
         data: function() {
             return {
                 categoryArr: [],
-                bannerArr:[],
-                activeIndex:"",
-                wd:"",//文本框双向绑定的变量
-                topArr:[],
+                activeIndex:"",//默认菜单下标为1
+                wd:"",
                 productArr:[]
             }
         },
        methods: {
            handleSelect(key,keyPath){
                console.log(key,keyPath);
-               //跳转到结果页面 把分类id传递过去
-               location.href="/result.html?id="+key;//这里的key代表分类的id(与index相同)
+               // //跳转到结果页面 把分类id传递过去
+               // location.href="/result.html?id="+key;//这里的key代表分类的id(与index相同)
+               //解决点击任意分类需重新跳转页面的问题,下面这样做只需每次点击都根据id查一遍即可
+               axios.get("/product/selectByCid?id="+key).then(function (response) {
+                   v.productArr = response.data;
+               })
            },
-           search(){//搜索的点击事件(搜索后跳转结果会将wd搜索内容在路径上传递过去)
-               //跳转到结果页面把搜索内容传递过去
-               location.href="/result.html?wd="+v.wd;
+           search(){//点击搜索,直接复用selectByWd的方法,将wd传入,根据内容搜索商品
+               axios.get("/product/selectByWd?wd="+v.wd).then(function (response) {
+                   v.productArr = response.data;
+               })
            }
        },
        //该方法可在打开页面后直接请求数据,页面进行显示
@@ -164,18 +137,22 @@
            axios.get("/category/select").then(function (response) {
                v.categoryArr = response.data;
            })
-           //发请求获取所有轮播图信息对象
-           axios.get("/banner/select").then(function (response) {
-               v.bannerArr = response.data;
-           })
-           //发请求获取排行榜数据
-           axios.get("/product/select/top").then(function (response) {
-               v.topArr = response.data;
-           })
-           //发请求获取所有商品信息
-           axios.get("/product/select/index").then(function (response) {
-               v.productArr = response.data;
-           })
+           //判断地址栏中传递的是搜索内容(包含wd)还是分类id(包含id)
+           if (location.search.indexOf("wd")!=-1){//包含wd代表路径上传的是搜索结果
+               //根据地址栏中的wd搜索内容发出请求获取所有商品
+               axios.get("/product/selectByWd"+location.search).then(function (response) {
+                   v.productArr = response.data;
+               })
+           }else {//不包含wd代表路径上传的是分类信息id
+               //根据地址栏中分类id查询对象的商品信息
+               axios.get("/product/selectByCid"+location.search).then(function (response) {
+                   //查询将指定分类下的商品信息
+                   v.productArr = response.data;
+               })
+               //?id=3 因为是刚进入页面就请求,这里要用this(当前Vue对象),如果用v或报:在定义之前不能使用的错误
+               let cid = location.search.split("=")[1];
+               this.activeIndex = cid;
+           }
        }
    })
 </script>
